<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<LinearLayout
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:orientation="vertical" android:padding="4px">
    	<TextView
    		android:id="@+id/series_record_title"
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:text="Title"/>
	    <Spinner
	    	android:id="@+id/series_record_device"
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:prompt="@string/series_record_device"/>
	    <Spinner
	    	android:id="@+id/series_record_network"
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:prompt="@string/series_record_network"/>
	    <Spinner
	    	android:id="@+id/series_record_time"
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:prompt="@string/series_record_time"/>
	    <Spinner
	    	android:id="@+id/series_record_record"
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:prompt="@string/series_record_record"/>
	    <Spinner
	    	android:id="@+id/series_record_quality"
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:prompt="@string/series_record_quality"/>
	    <Spinner
	    	android:id="@+id/series_record_limit"
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:prompt="@string/series_record_limit"/>
	    	
	    <LinearLayout
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:orientation="horizontal">
	    	<Button
	    		android:id="@+id/series_record_record_btn"
	    		android:layout_width="wrap_content"
	    		android:layout_height="fill_parent"
	    		android:text="@string/series_record_record_btn"/>
	    	<Button
	    		android:id="@+id/series_record_cancel_btn"
	    		android:layout_width="wrap_content"
	    		android:layout_height="fill_parent"
	    		android:text="@string/series_record_cancel_btn"/>
	    </LinearLayout>
	</LinearLayout>
</ScrollView>