<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
   	android:layout_width="wrap_content"
   	android:layout_height="fill_parent"
   	android:padding="4px"
   	android:stretchColumns="1">
   	<TableRow>
   	<TextView
   	android:id="@+id/guide_filter_station_label"
   		android:layout_width="wrap_content"
   		android:layout_height="wrap_content"
   		android:gravity="right"
   		android:text="@string/guide_filter_station"/>
    <Spinner
    	android:id="@+id/guide_filter_station"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:prompt="@string/guide_filter_station"/>
    </TableRow>
   	<TableRow>
   	<TextView
   		android:layout_width="wrap_content"
   		android:layout_height="wrap_content"
   		android:gravity="right"
   		android:text="@string/guide_filter_time"/>
    <Spinner
    	android:id="@+id/guide_filter_time"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:prompt="@string/guide_filter_time"/>
    </TableRow>
    <TableRow>
   	<TextView
   		android:layout_width="wrap_content"
   		android:layout_height="wrap_content"
   		android:gravity="right"
   		android:text="@string/guide_filter_genre"/>
    <Spinner
    	android:id="@+id/guide_filter_genre"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:prompt="@string/guide_filter_genre"/>
    </TableRow>
   	<TableRow>
   	<TextView
   		android:layout_width="wrap_content"
   		android:layout_height="wrap_content"
   		android:gravity="right"
   		android:text="@string/guide_filter_text"/>
	<EditText
		android:id="@+id/guide_filter_search"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:hint="search"/>
	</TableRow>
	<Button
		android:id="@+id/guide_filter_filter_btn"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:text="@string/guide_filter_filter_btn"/>
</TableLayout>
