<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<LinearLayout
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:orientation="vertical" android:padding="4px">
	    <TextView
	    	android:id="@+id/program_view_title"
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:text="Title" android:textSize="12pt"/>
	    <TextView
	    	android:id="@+id/program_view_subtitle"
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:text="Subtitle" android:textSize="7pt"/>
	    <TextView
	    	android:id="@+id/program_view_datetime"
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:text="Summary" android:textSize="10pt" android:paddingTop="2px"/>
	    <TextView
	    	android:id="@+id/program_view_summary"
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:text="Summary" android:textSize="8pt" android:paddingTop="4px" android:paddingBottom="2px"
	    	android:textStyle="bold"/>
	    <TextView
	    	android:id="@+id/program_view_desc"
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:text="Description" android:textSize="8pt" android:paddingBottom="2px"/>
	    <TextView
	    	android:id="@+id/program_view_cast"
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:text="Cast" android:textSize="8pt"/>
    	<Button
    		android:id="@+id/program_view_record_episode"
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:text="@string/program_view_record_episode"/>
    	<Button
    		android:id="@+id/program_view_record_series"
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:text="@string/program_view_record_series"/>
    	<Button
    		android:id="@+id/program_view_add_favourite"
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:text="@string/program_view_add_favourite"/>
	</LinearLayout>
</ScrollView>